refactor OD2CDObjectVisitor and OD4DevelopmentToolTest for improved readability and consistency